# discord-stt-tts-bot

./: .codexrc.json  .env.example  .gitignore  LICENSE  README.md  bot.py  pyproject.toml  readme.md  requirements.txt
docs/: usage.md
src/discord_stt_tts_bot/: __init__.py  __main__.py  bot.py
src/discord_stt_tts_bot/webui/: app.js  index.html  styles.css
src/tampermonkey/: ccfolia-to-discord-bot.js
