[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-stt-tts-bot"
version = "0.1.0"
description = "Discord bot that provides text-to-speech and speech-to-text features."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["discord", "bot", "speech-to-text", "text-to-speech"]
dynamic = ["dependencies"]

[project.scripts]
discord-stt-tts-bot = "discord_stt_tts_bot.bot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
